Fix for dashboard positioning on ie9

--- a/assets/less/ie.less
+++ b/assets/less/ie.less
@@ -8,7 +8,14 @@ html.ie > body {
 
 	// Place your fixes here
 
+	.roller .list .item.bumper {
+
+		// height: 5px!important;
+
+	}
+
 }
+
 
 // IE 8 and below
 
@@ -25,7 +32,6 @@ html.ie.oldie > body {
 		position: static!important;
 
 	}
-
 
 	#logo a { background-image: url( ../img/mini-logo-small.png ); }
 
